<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/main_margin"
    android:orientation="vertical"
    tools:context=".view.RegisterFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_person"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_username"
        app:boxCornerRadiusBottomEnd="@dimen/field_corner"
        app:boxCornerRadiusBottomStart="@dimen/field_corner"
        app:boxCornerRadiusTopEnd="@dimen/field_corner"
        app:boxCornerRadiusTopStart="@dimen/field_corner"
        app:boxStrokeColor="@color/blackTransparent"
        app:boxStrokeWidth="1dp"
        app:boxStrokeWidthFocused="1dp"
        app:endIconTint="@color/colorTextSecondary"
        app:layout_constraintTop_toBottomOf="@+id/labelName"
        tools:layout_editor_absoluteX="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_outline_person"
            android:drawablePadding="8dp"
            android:inputType="textEmailAddress"
            android:paddingTop="@dimen/padding_top_form"
            android:paddingBottom="@dimen/padding_top_form" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_email"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        app:boxCornerRadiusBottomEnd="@dimen/field_corner"
        app:boxCornerRadiusBottomStart="@dimen/field_corner"
        app:boxCornerRadiusTopEnd="@dimen/field_corner"
        android:layout_marginTop="@dimen/secondary_margin"
        app:boxCornerRadiusTopStart="@dimen/field_corner"
        app:boxStrokeColor="@color/blackTransparent"
        app:boxStrokeWidth="1dp"
        app:boxStrokeWidthFocused="1dp"
        app:endIconTint="@color/colorTextSecondary"
        app:layout_constraintTop_toBottomOf="@+id/labelName"
        tools:layout_editor_absoluteX="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_outline_email"
            android:drawablePadding="8dp"
            android:inputType="textEmailAddress"
            android:paddingTop="@dimen/padding_top_form"
            android:paddingBottom="@dimen/padding_top_form" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_password"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/secondary_margin"
        android:hint="@string/hint_password"
        app:boxCornerRadiusBottomEnd="@dimen/field_corner"
        app:boxCornerRadiusBottomStart="@dimen/field_corner"
        app:boxCornerRadiusTopEnd="@dimen/field_corner"
        app:boxCornerRadiusTopStart="@dimen/field_corner"
        app:boxStrokeColor="@color/blackTransparent"
        app:boxStrokeWidth="1dp"
        app:boxStrokeWidthFocused="1dp"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/colorTextSecondary"
        app:layout_constraintTop_toBottomOf="@+id/labelName"
        tools:layout_editor_absoluteX="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_outline_key"
            android:drawablePadding="8dp"
            android:inputType="textPassword"
            android:paddingTop="@dimen/padding_top_form"
            android:paddingBottom="@dimen/padding_top_form" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegister"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/main_margin"
        android:padding="@dimen/btn_padding"
        android:text="@string/action_register"
        app:cornerRadius="@dimen/btn_corner" />

</LinearLayout>